fixed app jumping problem when adding border to inputs

--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ header {
   padding: 0.5rem 1.9rem;
   background-color: var(--light-grayish-cyan-1);
   border-radius: 0.5rem;
+  border: 2px solid transparent;
 }
 
 .input {
@@ -164,6 +165,7 @@ input[type="number"] {
   width: 100%;
   padding-right: 1.7rem;
   border-radius: 0.5rem;
+  border: 2px solid transparent;
 }
 
 .custom:focus-within {
